# mini-git

./: .gitignore  README.md  noxfile.py  pyproject.toml  references.md
.github/workflows/: ci.yml
.kiro/steering/: product.md  structure.md  tech.md
dev/scripts/: create_sample_git.sh
research/: behavior_research.md  references.md
src/mini_git/: cli.py  models.py  types.py
src/mini_git/commands/: __init__.py  add.py  init.py
src/mini_git/core/: __init__.py  git_repository.py  object_store.py
src/mini_git/services/: __init__.py  add_service.py  repo_context.py  tree_store.py
src/mini_git/storage/: __init__.py  git_dir.py  index_store.py  object_store.py
tests/: README.md
tests/e2e/: test_cli_e2e.py  test_git_add.py
tests/integration/: test_add_workflow.py  test_cli_integration.py
tests/unit/: test_models.py
tests/unit/commands/: __init__.py  test_add_command.py  test_init_command.py
tests/unit/core/: test_git_repository.py
tests/unit/services/: __init__.py  test_add_service.py  test_repo_context.py
tests/unit/storage/: test_git_dir.py  test_index_store.py  test_object_store.py
