[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mini-git"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "typer>=0.16.0",
]

[project.scripts]
mgit = "mini_git.cli:main"

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "nox-uv>=0.6.2",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
